--- a/SmartTable/SmartTable./Base.lproj/Main.storyboard
+++ b/SmartTable/SmartTable./Base.lproj/Main.storyboard
@@ -131,7 +131,7 @@
                                 <rect key="frame" x="20" y="348" width="374" height="200"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XwI-pJ-oyT">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -141,7 +141,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EH0-cz-6iI">
-                                        <rect key="frame" x="0.0" y="52.5" width="374" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="42" width="374" height="32"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -151,7 +151,21 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kIw-wR-YyK" customClass="CMTexField" customModule="SmartTable_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="105" width="374" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="84" width="374" height="32"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="13"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                <real key="value" value="-16"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isPasswordTF" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ConfirmPassword" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Vw-gl-GZU" customClass="CMTexField" customModule="SmartTable_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="126" width="374" height="32"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -165,7 +179,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4im-yV-zbz">
-                                        <rect key="frame" x="0.0" y="157.5" width="374" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="168" width="374" height="32"/>
                                         <color key="backgroundColor" systemColor="systemGrayColor"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
@@ -196,6 +210,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="f26-J0-WyH"/>
                     <connections>
+                        <outlet property="confirmPasswordTF" destination="4Vw-gl-GZU" id="pX4-0v-Pzg"/>
                         <outlet property="createAccountButton" destination="4im-yV-zbz" id="ipZ-eP-o02"/>
                         <outlet property="emailTF" destination="EH0-cz-6iI" id="ej0-ta-J7L"/>
                         <outlet property="nameTF" destination="XwI-pJ-oyT" id="jmZ-9F-9WQ"/>
@@ -378,7 +393,7 @@
                                 <rect key="frame" x="20" y="338" width="374" height="250"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your restaurant name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z7e-PJ-Xzy">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="55"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -388,7 +403,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RLF-5O-VtT">
-                                        <rect key="frame" x="0.0" y="65" width="374" height="55"/>
+                                        <rect key="frame" x="0.0" y="52" width="374" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -398,7 +413,21 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLN-wg-V52" customClass="CMTexField" customModule="SmartTable_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="130" width="374" height="55"/>
+                                        <rect key="frame" x="0.0" y="104" width="374" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="13"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                <real key="value" value="-16"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isPasswordTF" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ConfirmPassword" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X7z-Lv-QV5" customClass="CMTexField" customModule="SmartTable_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="156" width="374" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
@@ -412,7 +441,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7k-Mx-q2h">
-                                        <rect key="frame" x="0.0" y="195" width="374" height="55"/>
+                                        <rect key="frame" x="0.0" y="208" width="374" height="42"/>
                                         <color key="backgroundColor" systemColor="systemGrayColor"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
@@ -442,6 +471,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="e18-Qr-sbx"/>
                     <connections>
+                        <outlet property="confirmPasswordTF" destination="X7z-Lv-QV5" id="V7Y-TR-Zed"/>
                         <outlet property="createAccountButton" destination="e7k-Mx-q2h" id="6y7-rb-86o"/>
                         <outlet property="emailTF" destination="RLF-5O-VtT" id="LUo-6a-VNy"/>
                         <outlet property="nameTF" destination="Z7e-PJ-Xzy" id="Rgw-zL-M6e"/>
@@ -721,11 +751,17 @@
         </scene>
     </scenes>
     <designables>
+        <designable name="4Vw-gl-GZU">
+            <size key="intrinsicContentSize" width="142" height="34"/>
+        </designable>
         <designable name="7er-7k-SbP">
             <size key="intrinsicContentSize" width="90.5" height="34"/>
         </designable>
         <designable name="Le5-lo-JQO">
             <size key="intrinsicContentSize" width="90.5" height="34"/>
+        </designable>
+        <designable name="X7z-Lv-QV5">
+            <size key="intrinsicContentSize" width="142" height="34"/>
         </designable>
         <designable name="jLN-wg-V52">
             <size key="intrinsicContentSize" width="90" height="34"/>
